external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_match_unit.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/invalid_match_unit.move:7:14
  │
7 │             () => ()
  │              ^ Invalid pattern

error[E04005]: expected a single type
   ┌─ tests/move_2024/matching/invalid_match_unit.move:12:16
   │
 3 │     fun x() { }
   │         - Expected a single type, but found expression list type: '()'
   ·
12 │         match (x()) {
   │                ^^^ Invalid 'match' subject

